@@ -5,8 +5,3 @@
 
 * Make netcfg-static smarter about default values, e.g. call ifconfig and
   parse.
-
-* allow user option to reconfigure with static IP, reconfigure wireless,
-  or retry DHCP without sacrificing UI usability
-
-* rewrite the whole getif() mess without static buffers
